# character-sheet

./: .gitignore  Cargo.toml  README.md
db/: schema.sql
db/migrations/: manifest.json
db/migrations/create-campaign-note/: down.sql  up.sql
db/migrations/create-character/: down.sql  up.sql
db/migrations/create-character-delta/: down.sql  up.sql
src/: campaign_note.rs  character_detail_page.rs  character_listing_page.rs  commit_history.rs  commits.rs  main.rs  markdown.rs  migration.rs  page.rs  queries.rs  sheet_detail_page.rs  sheet_listing_page.rs
src/models/: campaign_note.rs  character.rs  character_data.rs  character_delta.rs  field_diff.rs  mod.rs
static/css/: base.css
static/js/: api.js  campaign-note-modal.js  dirty-fields-manager.js  elements.js  event-bus.js  fetchers.js  fields.js  history-drawer.js  history-list.js  history-modal.js  layouts.js  lib.js  main.js  modal.js  notification-manager.js  setup-campaign-note-modal.js  setup-commit-changes-modal.js  setup-commit-history-drawer.js  setup-fancy-modal.js  setup-fields.js  setup-history-drawer.js  setup-history-modal.js  setup-save-commit-modal.js  sheet-listing.js  utils.js
static/js/disclosures/: drawer.js  modal.js  tabs.js
static/js/fancy-modal/: fancy-modal.js  tc-campaign-note.js  tc-commit-changes.js  tc-save-note.js
static/js/fields/: ability-field.js  index.js  markdown-field.js  number-field.js  proficiency-field.js  text-field.js
templates/layouts/: base.html
templates/pages/: character-detail.html  character-listing.html  sheet-detail.html  sheet-listing.html
