[package]
name = "character-sheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.8"
log = "0.4"
rusqlite = { version = "0.28.0", features = ["chrono", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"